# LinuxRPC

./: .gitignore  Cargo.toml  PKGBUILD  README.md
src/: cli.rs  config.rs  main.rs
systemd/: linuxrpc.service
