[package]
name = "linuxrpc"
version = "1.0.1"
edition = "2024"
authors = ["Sinmysize <sinmysize@gmail.com>"]
license = "MIT"
description = "A simple and customizable RPC client for discord."
repository = "https://github.com/Sinmysize/LinuxRPC"
readme = "README.md"
categories = ["command-line-utilities"]

[[bin]]
name = "linuxrpc"
path = "src/main.rs"

[dependencies]
console = "0.16.1"
dialoguer = "0.12.0"
discord-rich-presence = "1.0.0"
rand = "0.9.2"
